# moma_grasp_ws

./: .gitignore  README.md  connect_ws.bash  overview
.catkin_tools/profiles/default/: devel_collisions.txt
data_plotting/: analysis.py  eval_data_0.csv  eval_data_5.csv  eval_data_6.csv  eval_data_8.csv  model_idx_to_name.csv  plot.py
data_plotting/data/: eval_data_1.csv  eval_data_10.csv  eval_data_11.csv  eval_data_12.csv  eval_data_13.csv  eval_data_14.csv  eval_data_15.csv  eval_data_16.csv  eval_data_17.csv  eval_data_18.csv  eval_data_19.csv  eval_data_2.csv  eval_data_20.csv  eval_data_21.csv  eval_data_22.csv  eval_data_23.csv  eval_data_24.csv  eval_data_25.csv  eval_data_26.csv  eval_data_27.csv  eval_data_28.csv  eval_data_29.csv  eval_data_3.csv  eval_data_30.csv  eval_data_31.csv  eval_data_32.csv  eval_data_33.csv  eval_data_34.csv  eval_data_35.csv  eval_data_36.csv  eval_data_37.csv  eval_data_38.csv  eval_data_39.csv  eval_data_4.csv  eval_data_40.csv  eval_data_41.csv  eval_data_42.csv  eval_data_43.csv  eval_data_44.csv  eval_data_45.csv  (+7 more)
src/: .gitignore  eval_data.csv  quality_data.csv  quality_data_1.csv
src/debug_motion/: CMakeLists.txt  package.xml
src/debug_motion/script/: move.py
src/evaluation/: CMakeLists.txt  package.xml
src/evaluation/scripts/: evalutation_node.py
src/moma/docker/: run_docker.sh
src/moma/moma_demos/grasp_demo/: CMakeLists.txt  (+1 more)
src/next_best_view/: CMakeLists.txt  package.xml
src/next_best_view/action/: GetNextBestView.action
src/next_best_view/scripts/: .gitignore  info_gain_utility.py  next_best_view_node.py  zero1to3_predict.py
src/vgn/nodes/: tsdf_server.py
(+15 files in other folders)
